Source/WebKit2/UIProcess/Network/NetworkProcessProxy.cpp
@@ -356,6 +356,10 @@ void NetworkProcessProxy::processReadyToSuspend()
     m_throttler.processReadyToSuspend();
 }
 
+void NetworkProcessProxy::didSetAssertionState(AssertionState)
+{
+}
+    
 void NetworkProcessProxy::setIsHoldingLockedFiles(bool isHoldingLockedFiles)
 {
     if (!isHoldingLockedFiles) {
