Source/WebKit2/UIProcess/Network/NetworkProcessProxy.h
@@ -92,6 +92,7 @@ private:
     void sendPrepareToSuspend() override;
     void sendCancelPrepareToSuspend() override;
     void sendProcessDidResume() override;
+    void didSetAssertionState(AssertionState) override;
 
     // IPC::Connection::Client
     virtual void didReceiveMessage(IPC::Connection&, IPC::MessageDecoder&) override;
