Source/WebKit2/UIProcess/ProcessThrottler.cpp
@@ -55,8 +55,10 @@ AssertionState ProcessThrottler::assertionState()
 void ProcessThrottler::updateAssertionNow()
 {
     m_suspendTimer.stop();
-    if (m_assertion)
+    if (m_assertion) {
         m_assertion->setState(assertionState());
+        m_process.didSetAssertionState(assertionState());
+    }
 }
     
 void ProcessThrottler::updateAssertion()
@@ -69,6 +71,7 @@ void ProcessThrottler::updateAssertion()
         m_process.sendPrepareToSuspend();
         m_suspendTimer.startOneShot(processSuspensionTimeout);
         m_assertion->setState(AssertionState::Background);
+        m_process.didSetAssertionState(AssertionState::Background);
         return;
     }
     
@@ -88,6 +91,7 @@ void ProcessThrottler::didConnectToProcess(pid_t pid)
 {
     m_suspendTimer.stop();
     m_assertion = std::make_unique<ProcessAndUIAssertion>(pid, assertionState());
+    m_process.didSetAssertionState(assertionState());
     m_assertion->setClient(*this);
 }
     
