Source/WebKit2/UIProcess/ProcessThrottlerClient.h
@@ -26,6 +26,8 @@
 #ifndef ProcessThrottlerClient_h
 #define ProcessThrottlerClient_h
 
+#include "ProcessAssertion.h"
+
 namespace WebKit {
 
 class ProcessThrottlerClient {
@@ -36,6 +38,8 @@ public:
     virtual void sendPrepareToSuspend() = 0;
     virtual void sendCancelPrepareToSuspend() = 0;
     virtual void sendProcessDidResume() = 0;
+
+    virtual void didSetAssertionState(AssertionState) = 0;
 };
 
 } // namespace WebKit
